====================
DOMBuilder CHANGELOG
====================

2011-01-25
----------

- Fixed modification of attributes by mapping functions.
- Added support for Boolean children in DOM mode.

2011-01-24
----------

- ``document`` is now passed in so code shrinkers can munge it.
- Added ``"value"`` to the property access for IE7 proper.
- Fixed a horrible IE bug in the ``extend`` utility method :(
- Fixed a bug in ``DOMBuilder.map`` - ``DOMBuilder.createElement`` expects
  children to be in an array.
- Extracted ``HTMLNode`` base class to contain common logic from
  ``HTMLElement`` and ``HTMLFragment``. 
- Renamed ``Tag`` to ``HTMLElement``.
- ``DOMBuilder.fragment`` now works in HTML mode - ``HTMLFragment`` objects
  lightly mimic the ``DocumentFragment`` API.
- Added ``DOMBuilder.map``.

2011-01-23
----------

- Now detects which fixes are needed based on the version and document
  mode of IE.
- Folded special case handling into ``createElement`` as parts of it were
  needed to correct ``defaultValue`` and others in the nice browsers.
  Added private properties to DOMBuilder to support special cases.
- Added ``DOMBuilder.fragment``, a utility method for creating and
  populating ``DocumentFragment`` objects.

Version 1.2
===========

Packaged from revision 23 in Subversion.

2011-01-21
----------

- Created Sphinx docs.

2011-01-20
----------

- ``Tag`` objects created when in HTML mode now remember which mode was
  active when they were created, as they may not be coerced until a later
  time, when the mode may have changed.
- Added ``DOMBuilder.withMode`` to switch to HTML mode for the scope of a
  function call.
- Fixed short circuiting in element creation functions and decreased the
  number of checks required to determine which of the 4 supported argument
  combinations the user passed in.

2009-06-25
----------

- Attributes are now lowercased when generating HTML.
- Added and exposed an ``isSafe`` function - ``isSafe`` and ``markSafe``