@@ -12,7 +12,9 @@
   <!-- Code under test -->
   <script type="text/javascript" src="../DOMBuilder.js"></script>
   <!-- Test cases -->
+  <script type="text/javascript" src="dom.js"></script>
   <script type="text/javascript" src="html.js"></script>
+  <script type="text/javascript" src="mixedmode.js"></script>
 </head>
 <body>
   <h1 id="qunit-header">DOMBuilder QUnit Tests</h1>
